@@ -65,3 +65,4 @@
 - Enable debug log level for Metricbeat and Filebeat when run under the Elastic Agent. {pull}17935[17935]
 - Pick up version from libbeat {pull}18350[18350]
 - More clear output of inspect command {pull}18405[18405]
+- When not port are specified and the https is used fallback to 443 {pull}18844[18844]
